; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/mm/extr_page_alloc.c___page_find_buddy.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/mm/extr_page_alloc.c___page_find_buddy.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.page = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.page* (%struct.page*, i64, i32)* @__page_find_buddy to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.page* @__page_find_buddy(%struct.page* %0, i64 %1, i32 %2) #0 {
  %4 = alloca %struct.page*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i32, align 4
  %7 = alloca i64, align 8
  store %struct.page* %0, %struct.page** %4, align 8
  store i64 %1, i64* %5, align 8
  store i32 %2, i32* %6, align 4
  %8 = load i64, i64* %5, align 8
  %9 = load i32, i32* %6, align 4
  %10 = shl i32 1, %9
  %11 = sext i32 %10 to i64
  %12 = xor i64 %8, %11
  store i64 %12, i64* %7, align 8
  %13 = load %struct.page*, %struct.page** %4, align 8
  %14 = load i64, i64* %7, align 8
  %15 = load i64, i64* %5, align 8
  %16 = sub i64 %14, %15
  %17 = getelementptr inbounds %struct.page, %struct.page* %13, i64 %16
  ret %struct.page* %17
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
